make fonts smaller to prevent horizontal scroll

--- a/tests/dummy/app/styles/routes/index.scss
+++ b/tests/dummy/app/styles/routes/index.scss
@@ -66,6 +66,18 @@
   }
 }
 
+@media (max-width: 400px) {
+  #index .hero {
+    font-size: 28px;
+    p {
+      width: 340px;
+    }
+    .ember-logo {
+      height: 32px;
+    }
+  }
+}
+
 @media screen and (max-height: 400px) {
   #index .hero {
     font-size: 32px;
